<resources>
    <string name="app_name">Ejercicio4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="figuras">
        <item>Cubo</item>
        <item>Prisma</item>
        <item>Pirámide</item>
        <item>Cilindro</item>
        <item>Cono</item>
        <item>Esfera</item>
    </string-array>
    <string name="btnSelec">Seleccionar figura</string>
    <string name="txtLado">Lado</string>
    <string name="txtAreaBase">Área Base</string>
    <string name="txtPerBase">Perímetro Base</string>
    <string name="txtAltura">Altura</string>
    <string name="txtApotema">Apotema</string>
    <string name="txtRadio">Radio</string>
    <string name="txtGener">Generatriz</string>
    <string name="btnCalcArea">Calcular Área</string>
    <string name="btnCalcVol">Calcular Volumen</string>
</resources>