<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:collapsedTitleTextColor="@color/white"
            app:expandedTitleTextColor="@color/white">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/butterd"
                app:layout_collapseMode="parallax"/>
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="32dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/spnFiguras"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/figuras"/>
                <Button
                    android:id="@+id/btnSelec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnSelec"/>
            </LinearLayout>
            <EditText
                android:id="@+id/txtLado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txtLado"
                android:inputType="numberDecimal"/>

            <EditText
                android:id="@+id/txtAreaBase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txtAreaBase"
                android:visibility="visible"
                android:inputType="numberDecimal"/>
            <EditText
                android:id="@+id/txtPerBase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txtPerBase"
                android:inputType="numberDecimal"/>
            <EditText
                android:id="@+id/txtAltura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txtAltura"
                android:inputType="numberDecimal"/>
            <EditText
                android:id="@+id/txtApotema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txtApotema"
                android:inputType="numberDecimal"/>
            <EditText
                android:id="@+id/txtRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txtRadio"
                android:inputType="numberDecimal"/>
            <EditText
                android:id="@+id/txtGener"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txtGener"
                android:inputType="numberDecimal"/>
            <Button
                android:id="@+id/btnCalcArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCalcArea" />
            <Button
                android:id="@+id/btnCalcVol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCalcVol"/>
            <ImageView
                android:id="@+id/imgFigura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                tools:src="@drawable/ic_launcher_background"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

